Refactor notification service and fix Smells